# gtk-simple-editor

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  mkinstalldirs
debian/: README.Debian  changelog  control  docs  files  numakiti.1  numakiti.postinst.debhelper  numakiti.prerm.debhelper  rules
debian/numakiti/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/numakiti/usr/lib/menu/: numakiti
debian/numakiti/usr/share/doc/numakiti/: ChangeLog  NEWS  copyright
po/: ChangeLog  POTFILES.in  ja.gmo  ja.po  numakiti.pot  update.sh
src/: Makefile.am  Makefile.in  about.c  about.h  callbacks.c  callbacks.h  intl.h  main.c  main.h  menu.c  menu.h  nkfile.c  nkfile.h  preference.c  preference.h
src/pixmaps/: copy.xpm  cut.xpm  exit.xpm  new.xpm  numakiti.xpm  open.xpm  paste.xpm  print.xpm  save.xpm  save_as.xpm
